force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/Encuesta_Seguimiento_de_Ejecutivos__c.object-meta.xml
<CustomObject>
    <label>Encuesta Seguimiento de Ejecutivos</label>
    <nameField>
        <displayFormat>E-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Nombre de Encuesta Seguimiento de Ejecutivos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas de Seguimiento de Ejecutivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>