force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Canal_de_Distribuci_n__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_Distribuci_n__c</fullName>
    <formula>TEXT( Cuenta__r.clave_delcanal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal de Distribución</label>
    <type>Text</type>
</CustomField>