force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Comentarios_del_Asesor_de_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_del_Asesor_de_Call_Center__c</fullName>
    <inlineHelpText>Registrar por parte del asesor de Call Center alguna percepción que halla tenido respecto a la persona encuestada.
Por ejemplo: Molestia del cliente, Poco interés a la encuesta, Respuestas agresivas, etc</inlineHelpText>
    <label>Comentarios del Asesor de Call Center</label>
    <type>TextArea</type>
</CustomField>