force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Conoce_al_ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Conoce_al_ejecutivo__c</fullName>
    <formula>IF( TEXT( Nombre_del_Ejecutivo__c)  = &quot;No conoce el nombre del ejecutivo&quot;,&quot;NO&quot;,&quot;SI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conoce al ejecutivo</label>
    <type>Text</type>
</CustomField>