force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Conoce_al_gerente__c.field-meta.xml
<CustomField>
    <fullName>Conoce_al_gerente__c</fullName>
    <formula>IF( TEXT( Nombre_del_Gerente_Regional__c ) = &quot;No conoce el nombre del gerente&quot;,&quot;NO&quot;,&quot;SI&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conoce al gerente</label>
    <type>Text</type>
</CustomField>