force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Encuestas de Seguimiento de Ejecutivos</relationshipLabel>
    <relationshipName>Encuestas_de_Seguimiento_de_Ejecutivos</relationshipName>
    <type>Lookup</type>
</CustomField>