force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Cuenta_con_Ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_con_Ejecutivo__c</fullName>
    <formula>IF( Ejecutivo_Asignado_en_Sistema__c  = &quot;Alma Rosas&quot;,&quot;Sin Ejecutivo Asignado&quot;,&quot;Con Ejecutivo Asignado&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus de la Cuenta</label>
    <type>Text</type>
</CustomField>