force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Ejecutivo_Asignado_en_Sistema__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_Asignado_en_Sistema__c</fullName>
    <formula>Cuenta__r.Owner.FirstName  &amp; &quot; &quot; &amp; Cuenta__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ejecutivo Asignado en Sistema</label>
    <type>Text</type>
</CustomField>