force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Encuesta_realizada_por__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_realizada_por__c</fullName>
    <label>Encuesta realizada por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ángel Martínez Chapital</fullName>
            </value>
            <value>
                <fullName>Arturo Magaña</fullName>
            </value>
            <value>
                <fullName>Claudia Martínez Olivares</fullName>
            </value>
            <value>
                <fullName>Diego Villalta</fullName>
            </value>
            <value>
                <fullName>Laura Perea</fullName>
            </value>
            <value>
                <fullName>Luz María Alvarado</fullName>
            </value>
            <value>
                <fullName>Miguel Medina</fullName>
            </value>
            <value>
                <fullName>Omar García</fullName>
            </value>
            <value>
                <fullName>Santiago Miranda</fullName>
            </value>
            <value>
                <fullName>Christian Méndez Lemus</fullName>
            </value>
            <value>
                <fullName>Luis Nava Granados</fullName>
                <isActive>false</isActive>
                <label>Luis Nava Granados</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>