force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Fecha_de_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Encuesta__c</fullName>
    <label>Fecha de Encuesta</label>
    <type>Date</type>
</CustomField>