force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Fecha_de_la_ltima_visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_ltima_visita__c</fullName>
    <label>Fecha de la última visita</label>
    <type>Date</type>
</CustomField>