force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Gpo_Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Gpo_Vendedor__c</fullName>
    <formula>TEXT( Cuenta__r.Owner.Grupo_de_Vendedor__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gpo Vendedor</label>
    <type>Text</type>
</CustomField>