force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/No_lo_ha_visitado__c.field-meta.xml
<CustomField>
    <fullName>No_lo_ha_visitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No lo ha visitado</label>
    <type>Checkbox</type>
</CustomField>