force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Nombre_del_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Contacto__c</fullName>
    <label>Nombre del Contacto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>