force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Nombre_del_Ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Ejecutivo__c</fullName>
    <label>Nombre del Ejecutivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No conoce el nombre del ejecutivo</fullName>
            </value>
            <value>
                <fullName>Alexis Montes de Oca</fullName>
            </value>
            <value>
                <fullName>Alexis Salinas</fullName>
            </value>
            <value>
                <fullName>Carla Romero</fullName>
            </value>
            <value>
                <fullName>Cesar Rosas</fullName>
            </value>
            <value>
                <fullName>Daniel Martínez Vázquez</fullName>
            </value>
            <value>
                <fullName>Edgar Bringas</fullName>
            </value>
            <value>
                <fullName>Edgar López</fullName>
            </value>
            <value>
                <fullName>Erika Pamela Alva</fullName>
            </value>
            <value>
                <fullName>Esmeralda Zarate</fullName>
            </value>
            <value>
                <fullName>Iván González</fullName>
            </value>
            <value>
                <fullName>Jorge Luis Muñoz</fullName>
            </value>
            <value>
                <fullName>Jorge Román</fullName>
            </value>
            <value>
                <fullName>José Granados Muñoz</fullName>
            </value>
            <value>
                <fullName>José Ortega</fullName>
            </value>
            <value>
                <fullName>José Rodríguez</fullName>
            </value>
            <value>
                <fullName>León Arriaga</fullName>
            </value>
            <value>
                <fullName>Luis Enrique Orta</fullName>
            </value>
            <value>
                <fullName>Manuel Careaga</fullName>
            </value>
            <value>
                <fullName>María Gutiérrez</fullName>
            </value>
            <value>
                <fullName>Mario Cuevas Hernández</fullName>
            </value>
            <value>
                <fullName>Matías Pech</fullName>
            </value>
            <value>
                <fullName>Melissa Corona</fullName>
            </value>
            <value>
                <fullName>Miguel Ángel Molina</fullName>
            </value>
            <value>
                <fullName>Norma Alarcón</fullName>
            </value>
            <value>
                <fullName>Olga María Vargas</fullName>
            </value>
            <value>
                <fullName>Ricardo Gómez</fullName>
            </value>
            <value>
                <fullName>Ricardo Lujan</fullName>
            </value>
            <value>
                <fullName>Roberto Medina</fullName>
            </value>
            <value>
                <fullName>Ricardo Rubio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>