force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/Nombre_del_Gerente_Regional__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Gerente_Regional__c</fullName>
    <label>Nombre del Gerente Regional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No conoce el nombre del gerente</fullName>
            </value>
            <value>
                <fullName>Ariel Escamilla</fullName>
            </value>
            <value>
                <fullName>Erik Flores</fullName>
            </value>
            <value>
                <fullName>Fernando Cedillo</fullName>
            </value>
            <value>
                <fullName>Gabriela Gonzáles Araiza</fullName>
            </value>
            <value>
                <fullName>Jose Rodriguez</fullName>
            </value>
            <value>
                <fullName>Juan Pablo López</fullName>
            </value>
            <value>
                <fullName>Marco Mangas</fullName>
            </value>
            <value>
                <fullName>Sergio Macias</fullName>
            </value>
            <value>
                <fullName>Ramón Reyes</fullName>
            </value>
            <value>
                <fullName>Uriel Gaona</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>