force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/pregunta1__c.field-meta.xml
<CustomField>
    <fullName>pregunta1__c</fullName>
    <inlineHelpText>Su asesor acude a sus visitas con una excelente presentación</inlineHelpText>
    <label>Presentación del Asesor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frecuencia_Encuesta</valueSetName>
    </valueSet>
</CustomField>