force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/pregunta2__c.field-meta.xml
<CustomField>
    <fullName>pregunta2__c</fullName>
    <inlineHelpText>Está enterado de las promociones que la empresa le ofrece</inlineHelpText>
    <label>Conocimiento de las promociones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frecuencia_Encuesta</valueSetName>
    </valueSet>
</CustomField>