force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/pregunta3__c.field-meta.xml
<CustomField>
    <fullName>pregunta3__c</fullName>
    <inlineHelpText>Su asesor le ofrece productos diferenciados o de alto valor</inlineHelpText>
    <label>Ofrecimiento de productos de alto valor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frecuencia_Encuesta</valueSetName>
    </valueSet>
</CustomField>