force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <formula>Cuenta__r.RFC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFC</label>
    <type>Text</type>
</CustomField>