force-app/main/default/objects/Encuesta_Seguimiento_de_Ejecutivos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Fecha_de_Encuesta__c</columns>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Ejecutivo_Asignado_en_Sistema__c</columns>
    <columns>Encuesta_realizada_por__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>